--- a/src/html/_popup.htm
+++ b/src/html/_popup.htm
@@ -1,4 +1,4 @@
-<div id="info-popup" aria-hidden="true" class="popup">
+<!-- <div id="info-popup" aria-hidden="true" class="popup">
 	<div class="popup__wrapper">
 		<div class="popup__content">
 			<button data-close type="button" class="popup__close"></button>
@@ -33,4 +33,4 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div> -->
