--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -8,11 +8,21 @@
 					<li class="menu__item"><a href="continuous.html" class="menu__link">Continuous</a></li>
 					<li class="menu__item"><a href="perfect.html" class="menu__link">Perfect</a></li>
 					<li class="menu__item"><a href="perfect_continuous.html" class="menu__link">Perfect Continuous</a></li>
-					<li class="menu__item"><a href="irregular-verbs.html" class="menu__link">Irregular Verbs</a></li>
+					<li class="menu__item"><a href="irregular-verbs.html" class="menu__link">Irregular verbs</a></li>
 					<li class="menu__item"><a href="reduction.html" class="menu__link">Reduction</a></li>
-					<!-- <li class="menu__item"><a href="" class="menu__link">Useful</a></li> -->
-					<!-- <li class="menu__item"><img src="img/icons/auto.svg" alt="auto switche"></li>-->
-					<li class="menu__item info"><button data-popup=".popup" class="info__button"><img src="img/icons/info.svg" alt="info"></button> </li>
+					<li class="menu__item">
+						<button id="theme-toggle" aria-label="Switch to dark theme" type="button">
+							<svg xmlns="http://www.w3.org/2000/svg" width="472.39" height="472.39" viewBox="0 0 472.39 472.39">
+								<g class="toggle-sun">
+									<path
+										d="M403.21,167V69.18H305.38L236.2,0,167,69.18H69.18V167L0,236.2l69.18,69.18v97.83H167l69.18,69.18,69.18-69.18h97.83V305.38l69.18-69.18Zm-167,198.17a129,129,0,1,1,129-129A129,129,0,0,1,236.2,365.19Z" />
+								</g>
+								<g class="toggle-circle">
+									<circle class="cls-1" cx="236.2" cy="236.2" r="103.78" />
+								</g>
+							</svg>
+						</button>
+					</li>
 				</ul>
 				<button type="button" class="menu__icon icon-menu"><span></span></button>
 			</nav>
