--- a/src/passive_voice.html
+++ b/src/passive_voice.html
@@ -1,105 +1,98 @@
 <!DOCTYPE html>
 <html lang="ru">
-	@@include('html/_head.htm',{
-	"title":"Passive voice"
-	})
-	<body>
-		<div class="wrapper">
-			@@include('html/_header.htm',{})
-			<main class="page page-passive">
-				<section class="tense-time">
-					<div data-spollers class="tense-time__container">
-	
-						<div class="spollers__item">
-							<button type="button" data-spoller class="marks__say">Simple</button>
-							<div class="spollers__statement"></div>
-						</div>
-						<div class="spollers__item">
-							<button type="button" data-spoller class="marks__say">Continuous</button>
-							<div class="spollers__denial"></div>
-						</div>
-						<div class="spollers__item">
-							<button type="button" data-spoller class="marks__say">Perfect</button>
-							<div class="spollers__question"></div>
-						</div>
-						<!--Pr ----------------------------------------------------------------------------------------------------- -->
-						<div data-da=".spollers__statement, 767" class="grid__tense additional-padding statement">
-							<div class="grid__mark present-mark">Pr</div>
-							<div class="grid__pronouns grid__1-2">
-								<div class="grid__pronouns-general">
-									am<br>is<br>are
-								</div>
-								<div class="grid__verb">Ved<br>V3</div>
+@@include('html/_head.htm',{
+"title":"Passive voice"
+})
+
+<body>
+	<div class="wrapper">
+		@@include('html/_header.htm',{})
+		<main class="page page-passive">
+			<section class="tense-time">
+				<div data-spollers class="tense-time__container">
+
+
+					@@include('html/_spollers.htm',{})
+
+					<!--Pr ----------------------------------------------------------------------------------------------------- -->
+					<div data-da=".spollers__statement, 767" class="grid__tense additional-padding statement">
+						<div class="grid__mark present-mark">Pr</div>
+						<div class="grid__pronouns grid__1-2">
+							<div class="grid__pronouns-general">
+								am<br>is<br>are
 							</div>
-						</div>
-						<div data-da=".spollers__denial, 767" class="grid__tense denial">
-							<div class="grid__mark present-mark hide-mark">Pr</div>
-							<div class="grid__pronouns colom-1-3">
-								<div class="grid__pronouns-general">
-									am<br>is<br>are
-								</div>
-								<div class="grid__word-question">being</div>
-								<div class="grid__verb">Ved<br>V3</div>
-							</div>
-						</div>
-						<div data-da=".spollers__question, 767" class="grid__tense question">
-							<div class="grid__mark present-mark hide-mark">Pr</div>
-							<div class="grid__pronouns colom-1-3">
-								<div class="grid__pronouns-general">
-									have<br>has
-								</div>
-								<div class="grid__word-question">been</div>
-								<div class="grid__verb">Ved<br>V3</div>
-							</div>
-						</div>
-						<!--Pa ---------------------------------------------------------------------- -->
-						<div data-da=".spollers__statement, 767" class="grid__tense additional-padding statement">
-							<div class="grid__mark past-mark">Pa</div>
-							<div class="grid__pronouns grid__1-2">
-								<div class="grid__pronouns-general">
-									was<br>were
-								</div>
-								<div class="grid__verb">Ved<br>V3</div>
-							</div>
-						</div>
-						<div data-da=".spollers__denial, 767" class="grid__tense denial">
-							<div class="grid__mark past-mark hide-mark">Pa</div>
-							<div class="grid__pronouns colom-1-3">
-								<div class="grid__pronouns-general">
-									was<br>were
-								</div>
-								<div class="grid__word-question">being</div>
-								<div class="grid__verb">Ved<br>V3</div>
-							</div>
-						</div>
-						<div data-da=".spollers__question, 767" class="grid__tense question">
-							<div class="grid__mark past-mark hide-mark">Pa</div>
-							<div class="grid__pronouns colom-1-3">
-								<div class="grid__pronouns-general">
-									had
-								</div>
-								<div class="grid__word-question">been</div>
-								<div class="grid__verb">Ved<br>V3</div>
-							</div>
-						</div>
-						<!--Fu ---------------------------------------------------------------------- -->
-						<div data-da=".spollers__statement, 767" class="grid__tense additional-padding statement">
-							<div class="grid__mark future-mark">Fu</div>
-							<div class="grid__pronouns grid__1-2">
-								<div class="grid__pronouns-general">
-									will be
-								</div>
-								<div class="grid__verb">Ved<br>V3</div>
-							</div>
+							<div class="grid__verb">Ved<br>V3</div>
 						</div>
 					</div>
-				</section>
-	
-	
-			</main>
-			@@include('html/_footer.htm',{})
-		</div>
-		@@include('html/_popup.htm',{})
-		@@include('html/_js.htm',{})
-	</body>
+					<div data-da=".spollers__denial, 767" class="grid__tense denial">
+						<div class="grid__mark present-mark hide-mark">Pr</div>
+						<div class="grid__pronouns colom-1-3">
+							<div class="grid__pronouns-general">
+								am<br>is<br>are
+							</div>
+							<div class="grid__word-question">being</div>
+							<div class="grid__verb">Ved<br>V3</div>
+						</div>
+					</div>
+					<div data-da=".spollers__question, 767" class="grid__tense question">
+						<div class="grid__mark present-mark hide-mark">Pr</div>
+						<div class="grid__pronouns colom-1-3">
+							<div class="grid__pronouns-general">
+								have<br>has
+							</div>
+							<div class="grid__word-question">been</div>
+							<div class="grid__verb">Ved<br>V3</div>
+						</div>
+					</div>
+					<!--Pa ---------------------------------------------------------------------- -->
+					<div data-da=".spollers__statement, 767" class="grid__tense additional-padding statement">
+						<div class="grid__mark past-mark">Pa</div>
+						<div class="grid__pronouns grid__1-2">
+							<div class="grid__pronouns-general">
+								was<br>were
+							</div>
+							<div class="grid__verb">Ved<br>V3</div>
+						</div>
+					</div>
+					<div data-da=".spollers__denial, 767" class="grid__tense denial">
+						<div class="grid__mark past-mark hide-mark">Pa</div>
+						<div class="grid__pronouns colom-1-3">
+							<div class="grid__pronouns-general">
+								was<br>were
+							</div>
+							<div class="grid__word-question">being</div>
+							<div class="grid__verb">Ved<br>V3</div>
+						</div>
+					</div>
+					<div data-da=".spollers__question, 767" class="grid__tense question">
+						<div class="grid__mark past-mark hide-mark">Pa</div>
+						<div class="grid__pronouns colom-1-3">
+							<div class="grid__pronouns-general">
+								had
+							</div>
+							<div class="grid__word-question">been</div>
+							<div class="grid__verb">Ved<br>V3</div>
+						</div>
+					</div>
+					<!--Fu ---------------------------------------------------------------------- -->
+					<div data-da=".spollers__statement, 767" class="grid__tense additional-padding statement">
+						<div class="grid__mark future-mark">Fu</div>
+						<div class="grid__pronouns grid__1-2">
+							<div class="grid__pronouns-general">
+								will be
+							</div>
+							<div class="grid__verb">Ved<br>V3</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+
+		</main>
+		@@include('html/_footer.htm',{})
+	</div>
+	@@include('html/_popup.htm',{})
+	@@include('html/_js.htm',{})
+</body>
+
 </html>
