--- a/continuous.html
+++ b/continuous.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220721234327">
+	<link rel="stylesheet" href="css/style.min.css">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -255,7 +255,7 @@
 		</div>
 	</div>
 </div> -->
-	<script src="js/app.min.js?_v=20220721234327"></script>
+	<script src="js/app.min.js"></script>
 </body>
 
 </html>
